# ChangeLog for www-client/opera
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.102 2007/07/07 18:08:14 jer Exp $

  07 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  -files/opera-9.21-install.patch:
  Remove deprecated patch.

*opera-9.21-r1 (07 Jul 2007)

  07 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  +files/opera-9.21-pluginpath.patch, +opera-9.21-r1.ebuild:
  Revision bump to apply a patch that extends the default site wide plugin
  paths (bug #181300).

  27 Jun 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.20.ebuild:
  Removing old version.

  27 Jun 2007; Christian Faulhammer <opfer@gentoo.org> opera-9.21.ebuild:
  stable x86, bug 183404

  27 Jun 2007; Lars Weiler <pylon@gentoo.org> opera-9.21.ebuild:
  Stable on ppc; bug #183404.

  27 Jun 2007; Ferris McCormick <fmccor@gentoo.org> opera-9.21.ebuild:
  Sparc stable --- Bug #183404 --- works fine for me.

  27 Jun 2007; Christoph Mende <angelos@gentoo.org> opera-9.21.ebuild:
  Stable on amd64 wrt bug 183404

  24 May 2007; Jeroen Roovers <jer@gentoo.org> files/opera.desktop:
  Updated to meet desktop entry specification, except for the previous GNOME
  "fix".

  22 May 2007; Jeroen Roovers <jer@gentoo.org> opera-9.21.ebuild:
  Make the debug USE flag go away. Tx jakub (bug #179393).

  21 May 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.10.ebuild:
  Removing 9.10 because of security bugs and because it is no longer required
  for bug #176085.

*opera-9.21 (21 May 2007)

  21 May 2007; Jeroen Roovers <jer@gentoo.org> -opera-9.20-r1.ebuild,
  +opera-9.21.ebuild, -opera-9.21.641.ebuild:
  Removed deprecated versions, added 9.21 final (same as the weekly I removed,
  basically), added patch for bug #179224.

  14 May 2007; Jeroen Roovers <jer@gentoo.org> opera-9.20-r1.ebuild,
  opera-9.21.641.ebuild:
  Changed language file URL (not just for Linux anymore). Fixed line lengths.

*opera-9.21.641 (14 May 2007)
